force-app/main/default/objects/CC_DataSyncFieldMapping__mdt/CC_DataSyncFieldMapping__mdt.object-meta.xml
<CustomObject>
    <label>DataSyncFieldMapping</label>
    <pluralLabel>DataSyncFieldMapping</pluralLabel>
</CustomObject>