force-app/main/default/objects/CC_DataSyncFieldMapping__mdt/fields/CC_DataSyncObjectMapping__c.field-meta.xml
<CustomField>
    <fullName>CC_DataSyncObjectMapping__c</fullName>
    <description>Object Reference</description>
    <inlineHelpText>Object Reference</inlineHelpText>
    <label>DataSyncObjectMapping</label>
    <referenceTo>CC_DataSyncObjectMapping__mdt</referenceTo>
    <relationshipLabel>DataSyncFieldMapping</relationshipLabel>
    <relationshipName>CC_DataSyncFieldMapping</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>