force-app/main/default/objects/CC_DataSyncFieldMapping__mdt/fields/CC_Field_Type__c.field-meta.xml
<CustomField>
    <fullName>CC_Field_Type__c</fullName>
    <description>Specify the field type of Target Field</description>
    <inlineHelpText>Specify the field type of Target Field. Only applicable in case of static value or parent relationsip field mapping.
Choose &apos;Expr&apos; if you want to evaluate an expression currently supported expressions are 
Now()
Today()</inlineHelpText>
    <label>Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
                <default>true</default>
                <label>Text</label>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>DateTime</fullName>
            </value>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>Expr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>