force-app/main/default/objects/CC_DataSyncFieldMapping__mdt/fields/CC_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>CC_Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Mark as Active if available for sync</description>
    <inlineHelpText>Mark as Active if available for sync</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>