force-app/main/default/objects/CC_DataSyncFieldMapping__mdt/fields/CC_Is_Static_Value__c.field-meta.xml
<CustomField>
    <fullName>CC_Is_Static_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mark True: if the value is static and not coming from any field
like always assign &apos;Test&apos; in Description field , 
to do that:
CC_Is_Static_Value =true;
CC_Field_type = Text
CC_Source_Field=Test</description>
    <inlineHelpText>Mark True: if the value is static and not coming from any field
like always assign &apos;Test&apos; in Description field , 
to do that:
CC_Is_Static_Value =true;
CC_Field_type = Text
CC_Source_Field=Test</inlineHelpText>
    <label>Is Static Value</label>
    <type>Checkbox</type>
</CustomField>