force-app/main/default/objects/CC_DataSyncFieldMapping__mdt/fields/CC_Not_for_mapping__c.field-meta.xml
<CustomField>
    <fullName>CC_Not_for_mapping__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Will use this field to only do the query and not do the mapping to the target object</inlineHelpText>
    <label>Not for mapping</label>
    <type>Checkbox</type>
</CustomField>