force-app/main/default/objects/CC_DataSyncFieldMapping__mdt/fields/CC_Source_Field__c.field-meta.xml
<CustomField>
    <fullName>CC_Source_Field__c</fullName>
    <description>API name of source field.</description>
    <inlineHelpText>API name of source field.</inlineHelpText>
    <label>Source Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>