force-app/main/default/objects/CC_DataSyncFieldMapping__mdt/fields/CC_Target_Field__c.field-meta.xml
<CustomField>
    <fullName>CC_Target_Field__c</fullName>
    <description>API name of target field.</description>
    <inlineHelpText>API name of target field.</inlineHelpText>
    <label>Target Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>