force-app/main/default/objects/CC_DataSyncFieldMapping__mdt/listViews/All_List.listView-meta.xml
<ListView>
    <fullName>All_List</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>IsProtected</columns>
    <columns>CC_DataSyncObjectMapping__c</columns>
    <columns>CC_Field_Type__c</columns>
    <columns>CC_Is_Active__c</columns>
    <columns>CC_Is_Static_Value__c</columns>
    <columns>CC_Source_Field__c</columns>
    <columns>CC_Target_Field__c</columns>
    <filterScope>Everything</filterScope>
    <label>All List</label>
</ListView>