force-app/main/default/objects/CC_DataSyncFieldMapping__mdt/listViews/Application_Spec_To_Application_Spec.listView-meta.xml
<ListView>
    <fullName>Application_Spec_To_Application_Spec</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>CC_DataSyncObjectMapping__c</columns>
    <columns>CC_Field_Type__c</columns>
    <columns>CC_Is_Active__c</columns>
    <columns>CC_Is_Static_Value__c</columns>
    <columns>CC_Source_Field__c</columns>
    <columns>CC_Target_Field__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CC_DataSyncObjectMapping__c</field>
        <operation>contains</operation>
        <value>Application_Spec_To_Application_Spec</value>
    </filters>
    <label>Application_Spec_To_Application_Spec</label>
</ListView>