force-app/main/default/objects/CC_DataSyncFieldMapping__mdt/listViews/BLA_To_Facility.listView-meta.xml
<ListView>
    <fullName>BLA_To_Facility</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>CC_Field_Type__c</columns>
    <columns>CC_Is_Active__c</columns>
    <columns>CC_Is_Static_Value__c</columns>
    <columns>CC_Source_Field__c</columns>
    <columns>CC_DataSyncObjectMapping__c</columns>
    <columns>CC_Target_Field__c</columns>
    <columns>CC_Not_for_mapping__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CC_DataSyncObjectMapping__c</field>
        <operation>contains</operation>
        <value>BLA_To_Facility</value>
    </filters>
    <label>BLA To Facility</label>
</ListView>