force-app/main/default/objects/CC_DataSyncFieldMapping__mdt/listViews/PAP_To_PA.listView-meta.xml
<ListView>
    <fullName>PAP_To_PA</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>CC_DataSyncObjectMapping__c</columns>
    <columns>CC_Field_Type__c</columns>
    <columns>CC_Is_Active__c</columns>
    <columns>CC_Is_Static_Value__c</columns>
    <columns>CC_Source_Field__c</columns>
    <columns>CC_Target_Field__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CC_DataSyncObjectMapping__c</field>
        <operation>contains</operation>
        <value>PAP_To_PA</value>
    </filters>
    <label>PAP_To_PA</label>
</ListView>